--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -64,5 +64,11 @@
             android:textIsSelectable="false"
             android:textStyle="bold"
             android:typeface="monospace" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="hi"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
     </LinearLayout>
 </LinearLayout>
